--- a/NLIB/NLIB.vcxproj.filters
+++ b/NLIB/NLIB.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="NetworkStruct.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="NetworkServer.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="NetworkClient.cpp">
@@ -52,6 +55,9 @@
     </ClCompile>
     <ClCompile Include="TransportLayer.cpp">
       <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="NetworkServer.cpp">
+      <Filter>헤더 파일</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
