--- a/NLIB/NLIB.vcxproj
+++ b/NLIB/NLIB.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="ByteStream.h" />
     <ClInclude Include="ClientState.h" />
     <ClInclude Include="NetworkClient.h" />
     <ClInclude Include="NetworkConfig.h" />
@@ -135,13 +136,16 @@
     <ClInclude Include="NetworkServer.h" />
     <ClInclude Include="NetworkStruct.h" />
     <ClInclude Include="TransportLayer.h" />
+    <ClInclude Include="Utility.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ByteStream.cpp" />
     <ClCompile Include="ClientState.cpp" />
     <ClCompile Include="NetworkClient.cpp" />
     <ClCompile Include="NetworkEndpoint.cpp" />
     <ClCompile Include="NetworkServer.cpp" />
     <ClCompile Include="TransportLayer.cpp" />
+    <ClCompile Include="Utility.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
