--- a/NLIB/NLIB.vcxproj
+++ b/NLIB/NLIB.vcxproj
@@ -143,6 +143,7 @@
     <ClInclude Include="NetworkSession.h" />
     <ClInclude Include="NetworkStruct.h" />
     <ClInclude Include="ProtocolPacket.h" />
+    <ClInclude Include="SessionState.h" />
     <ClInclude Include="TransportLayer.h" />
     <ClInclude Include="Utility.h" />
   </ItemGroup>
@@ -154,7 +155,9 @@
     <ClCompile Include="NetworkClient.cpp" />
     <ClCompile Include="NetworkEndpoint.cpp" />
     <ClCompile Include="NetworkServer.cpp" />
+    <ClCompile Include="NetworkSession.cpp" />
     <ClCompile Include="ProtocolPacket.cpp" />
+    <ClCompile Include="SessionState.cpp" />
     <ClCompile Include="TransportLayer.cpp" />
     <ClCompile Include="Utility.cpp" />
   </ItemGroup>
