--- a/NLIB/NLIB.vcxproj
+++ b/NLIB/NLIB.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -144,6 +144,9 @@
     <ClInclude Include="NetworkSession.h" />
     <ClInclude Include="NetworkStruct.h" />
     <ClInclude Include="ProtocolPacket.h" />
+    <ClInclude Include="ReliableClient.h" />
+    <ClInclude Include="ReliablePacket.h" />
+    <ClInclude Include="ReliableSession.h" />
     <ClInclude Include="SessionState.h" />
     <ClInclude Include="TransportLayer.h" />
     <ClInclude Include="Utility.h" />
@@ -158,6 +161,9 @@
     <ClCompile Include="NetworkServer.cpp" />
     <ClCompile Include="NetworkSession.cpp" />
     <ClCompile Include="ProtocolPacket.cpp" />
+    <ClCompile Include="ReliableClient.cpp" />
+    <ClCompile Include="ReliablePacket.cpp" />
+    <ClCompile Include="ReliableSession.cpp" />
     <ClCompile Include="SessionState.cpp" />
     <ClCompile Include="TransportLayer.cpp" />
     <ClCompile Include="Utility.cpp" />
