--- a/NLIB/NLIB.vcxproj.filters
+++ b/NLIB/NLIB.vcxproj.filters
@@ -13,12 +13,6 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
-    <Filter Include="RUDPLayer">
-      <UniqueIdentifier>{788ff28e-5950-4add-8afc-cb697c7124da}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="CUDPLayer">
-      <UniqueIdentifier>{0c44057d-c62d-4a42-b8e3-fd61e817d7b1}</UniqueIdentifier>
-    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="NetworkConfig.h">
@@ -42,41 +36,50 @@
     <ClInclude Include="ConnectToken.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="NetworkEndpoint.h">
-      <Filter>CUDPLayer</Filter>
-    </ClInclude>
-    <ClInclude Include="NetworkServer.h">
-      <Filter>CUDPLayer</Filter>
-    </ClInclude>
-    <ClInclude Include="NetworkSession.h">
-      <Filter>CUDPLayer</Filter>
+    <ClInclude Include="ClientState.h">
+      <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="NetworkClient.h">
-      <Filter>CUDPLayer</Filter>
+      <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="SessionState.h">
-      <Filter>CUDPLayer</Filter>
+    <ClInclude Include="NetworkEndpoint.h">
+      <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="ClientState.h">
-      <Filter>CUDPLayer</Filter>
-    </ClInclude>
-    <ClInclude Include="TransportLayer.h">
-      <Filter>CUDPLayer</Filter>
+    <ClInclude Include="NetworkSession.h">
+      <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="ProtocolPacket.h">
-      <Filter>CUDPLayer</Filter>
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="SessionState.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="TransportLayer.h">
+      <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="ReliableClient.h">
-      <Filter>RUDPLayer</Filter>
+      <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="ReliablePacket.h">
-      <Filter>RUDPLayer</Filter>
+      <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="ReliableSession.h">
-      <Filter>RUDPLayer</Filter>
+      <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="CUDPLayer.h">
-      <Filter>CUDPLayer</Filter>
+    <ClInclude Include="NetworkLayer.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="GamePacket.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="GameServer.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="GameServerHandler.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="GameSession.h">
+      <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -92,41 +95,44 @@
     <ClCompile Include="ConnectToken.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="ClientState.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
     <ClCompile Include="NetworkClient.cpp">
-      <Filter>CUDPLayer</Filter>
+      <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="NetworkEndpoint.cpp">
-      <Filter>CUDPLayer</Filter>
-    </ClCompile>
-    <ClCompile Include="NetworkServer.cpp">
-      <Filter>CUDPLayer</Filter>
+      <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="NetworkSession.cpp">
-      <Filter>CUDPLayer</Filter>
-    </ClCompile>
-    <ClCompile Include="ClientState.cpp">
-      <Filter>CUDPLayer</Filter>
-    </ClCompile>
-    <ClCompile Include="SessionState.cpp">
-      <Filter>CUDPLayer</Filter>
-    </ClCompile>
-    <ClCompile Include="TransportLayer.cpp">
-      <Filter>CUDPLayer</Filter>
+      <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="ProtocolPacket.cpp">
-      <Filter>CUDPLayer</Filter>
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="SessionState.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="TransportLayer.cpp">
+      <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="ReliableClient.cpp">
-      <Filter>RUDPLayer</Filter>
+      <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="ReliablePacket.cpp">
-      <Filter>RUDPLayer</Filter>
+      <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="ReliableSession.cpp">
-      <Filter>RUDPLayer</Filter>
+      <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="CUDPLayer.cpp">
-      <Filter>CUDPLayer</Filter>
+    <ClCompile Include="NetworkLayer.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="GameServer.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="GameSession.cpp">
+      <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
