--- a/NClient/NClient.vcxproj
+++ b/NClient/NClient.vcxproj
@@ -157,11 +157,15 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="NClient.cpp" />
+    <ClCompile Include="NClientHandler.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\NLIB\NLIB.vcxproj">
       <Project>{fc0b1d94-dd37-4fb7-8877-303265443d10}</Project>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="NClientHandler.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
