--- a/NClient/NClient.vcxproj.filters
+++ b/NClient/NClient.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="NClient.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="NClientHandler.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="NClientHandler.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
