--- a/NLIB/NLIB.vcxproj
+++ b/NLIB/NLIB.vcxproj
@@ -136,6 +136,8 @@
     <ClInclude Include="ByteStream.h" />
     <ClInclude Include="ClientState.h" />
     <ClInclude Include="ConnectToken.h" />
+    <ClInclude Include="GameClient.h" />
+    <ClInclude Include="GameClientHandler.h" />
     <ClInclude Include="GamePacket.h" />
     <ClInclude Include="GameServerHandler.h" />
     <ClInclude Include="GameSession.h" />
@@ -148,9 +150,8 @@
     <ClInclude Include="NetworkSession.h" />
     <ClInclude Include="NetworkStruct.h" />
     <ClInclude Include="ProtocolPacket.h" />
-    <ClInclude Include="ReliableClient.h" />
     <ClInclude Include="ReliablePacket.h" />
-    <ClInclude Include="ReliableSession.h" />
+    <ClInclude Include="ReliableLayer.h" />
     <ClInclude Include="SessionState.h" />
     <ClInclude Include="TransportLayer.h" />
     <ClInclude Include="Utility.h" />
@@ -160,6 +161,9 @@
     <ClCompile Include="ByteStream.cpp" />
     <ClCompile Include="ClientState.cpp" />
     <ClCompile Include="ConnectToken.cpp" />
+    <ClCompile Include="GameClient.cpp" />
+    <ClCompile Include="GameClientHandler.cpp" />
+    <ClCompile Include="GamePacket.cpp" />
     <ClCompile Include="GameSession.cpp" />
     <ClCompile Include="NetworkClient.cpp" />
     <ClCompile Include="NetworkEndpoint.cpp" />
@@ -167,9 +171,8 @@
     <ClCompile Include="NetworkLayer.cpp" />
     <ClCompile Include="NetworkSession.cpp" />
     <ClCompile Include="ProtocolPacket.cpp" />
-    <ClCompile Include="ReliableClient.cpp" />
     <ClCompile Include="ReliablePacket.cpp" />
-    <ClCompile Include="ReliableSession.cpp" />
+    <ClCompile Include="ReliableLayer.cpp" />
     <ClCompile Include="SessionState.cpp" />
     <ClCompile Include="TransportLayer.cpp" />
     <ClCompile Include="Utility.cpp" />
