--- a/NServer/NServer.vcxproj.filters
+++ b/NServer/NServer.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="NServer.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="NServerHandler.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="NServerHandler.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
