--- a/NLIB/NLIB.vcxproj
+++ b/NLIB/NLIB.vcxproj
@@ -151,7 +151,7 @@
     <ClInclude Include="GameSession.h" />
     <ClInclude Include="Logger.h" />
     <ClInclude Include="NetworkClient.h" />
-    <ClInclude Include="NetworkConfig.h" />
+    <ClInclude Include="GameConfig.h" />
     <ClInclude Include="NetworkDefine.h" />
     <ClInclude Include="NetworkEndpoint.h" />
     <ClInclude Include="GameServer.h" />
