--- a/NLIB/NLIB.vcxproj.filters
+++ b/NLIB/NLIB.vcxproj.filters
@@ -164,5 +164,8 @@
     <ClCompile Include="ChunkPacket.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="ChunkHolder.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
